...
    "Ideia": {
      "localizations": {}
    },
    "Silêncio": {
      "localizations": {}
    },
    "Esconder teclado": {
      "localizations": {}
    },
    "Foto": {
      "localizations": {}
    },
    "Vídeo": {
...
